[tool.poetry]
name = "sito"
version = "0.0.0"
description = "Standard Interfaces for Transforming Objects"
authors = ["Michael McDermott <michaelmcdermott11@gmail.com>"]
readme = "README.md"


[tool.black]
line-length = 120
target_version = ['py37']
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | build
    | dist
  )/
  | foo.py
)
'''

[tool.poetry.dependencies]
python = "^3.6.1"
dataclasses_json = "^0.4.5"
dataclasses = {version = "^0.8", python = ">=3.6, <3.7"}


[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.9.0"
flake8-mutable = "^1.2.0"
mypy = "^0.812"
coverage = "^5.5"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"


[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"
